Day 3: Job Auto-Find feature - job scraper, matcher, applications

--- a/templates/base.html
+++ b/templates/base.html
@@ -499,7 +499,8 @@
             <ul class="nav-links">
                 <!-- Core -->
                 <li><a href="/" {% if request.path == '/' %}class="active"{% endif %}><i class="fas fa-home"></i> Dashboard</a></li>
-                <li><a href="/job-tracker" {% if request.path == '/job-tracker' %}class="active"{% endif %}><i class="fas fa-tasks"></i> Jobs</a></li>
+                <li><a href="/job-finder" {% if request.path == '/job-finder' %}class="active"{% endif %}><i class="fas fa-search"></i> Find Jobs</a></li>
+                <li><a href="/job-tracker" {% if request.path == '/job-tracker' %}class="active"{% endif %}><i class="fas fa-tasks"></i> Tracker</a></li>
                 <li><a href="/cv-optimizer" {% if request.path == '/cv-optimizer' %}class="active"{% endif %}><i class="fas fa-file-alt"></i> CVs</a></li>
                 
                 <!-- Data & Knowledge -->
