--- a/templates/base.html
+++ b/templates/base.html
@@ -500,6 +500,7 @@
                 <!-- Core -->
                 <li><a href="/" {% if request.path == '/' %}class="active"{% endif %}><i class="fas fa-home"></i> Dashboard</a></li>
                 <li><a href="/job-finder" {% if request.path == '/job-finder' %}class="active"{% endif %}><i class="fas fa-search"></i> Find Jobs</a></li>
+                <li><a href="/adham-optimizer" {% if request.path == '/adham-optimizer' %}class="active"{% endif %}><i class="fas fa-magic"></i> ADHAM</a></li>
                 <li><a href="/job-tracker" {% if request.path == '/job-tracker' %}class="active"{% endif %}><i class="fas fa-tasks"></i> Tracker</a></li>
                 <li><a href="/cv-optimizer" {% if request.path == '/cv-optimizer' %}class="active"{% endif %}><i class="fas fa-file-alt"></i> CVs</a></li>
                 
